# bellastore

./: .gitignore  LICENSE  README.md  backup.py  main.py  pyproject.toml  requirements.txt
docs/: demo.ipynb
scripts/: main.py
src/: __init__.py
src/bellastore/database/: backup.py  base_table.py  bellatrix_table.py  database.py  db.py  ingress.py  split.py  storage.py  tables.py
src/bellastore/filesystem/: base_folder.py  constants.py  fs.py  ingress.py  storage.py
src/bellastore/scripts/: main.py
src/bellastore/utils/: constants.py  helpers.py  scan.py  state.py
tests/: conftest.py  test_database.py  test_db.py  test_db_fs.py  test_filesystem.py  test_fs.py  test_integration.py  test_scan.py  test_state.py
