[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bellastore"
version = "1.0.0"
description = "Digital pathology storage manager for WSI scans"
readme = "README.md"
authors = [
    {name = "Paul Huettl"},
    {name = "Lukas Wolfseher"},
]