[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bellastore"
version = "1.0.0"
authors = [
    { name = "Paul Huettl", email = "paulhuettl@web.de" },
    { name = "Lukas Wolfseher", email = "lukas.wolfseher@informatik.uni-regensburg.de" },
]
description = "Digital pathology storage manager for WSI scans"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas >= 2.0.0"
]

[project.scripts]
bellastore-insert = "bellastore.scripts.main:main"
bellastore-backup = "bellastore.scripts.backup:main"

[project.urls]
Source = "https://github.com/spang-lab/bellastore"
